--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-10  Gary V. Vaughan  <gary@gnu.org>
+
+	Fix a typu in HACKING.
+	* HACKING (Release Procedure): s/Makeflie/Makefile/.
+
 2010-06-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Factorize testing gcj installation in the testsuite.
